Fix render of the blocks, items need fixing